<resources>
    <string name="app_name">LiveInSeoul</string>
    <string name="home_bookmark">"즐겨찾기한 건물 보기"</string>
    <string name="map_init_message">지도를 불러오고 있습니다.</string>
    <string name="map_default_message">맵을 길게 누르시면 검색이 됩니다.</string>
    <string name="all_cafe">카페</string>
    <string name="all_food">음식점</string>
    <string name="all_hospital">병원</string>
    <string name="all_school">교육</string>
    <string name="all_store">마트</string>
    <string name="warning">최근 1년 내에 5번 이상의 거래 내역이 존재합니다</string>
    <string name="recent_price">최근 거래 가격</string>
    <string name="recent_price_unit">단위: 만원</string>
    <string name="trend_price">연도별 시세 추이</string>
    <string name="past_transation">과거 거래 내역</string>
    <string name="review">실제 거주 이야기</string>
    <string name="charter">전세</string>
    <string name="monthly_rent">월세</string>
    <string name="review_create"> 작성하기</string>
    <string name="address">주소</string>
    <string name="charter_and_monthly_rent">보증금 / 월세</string>
    <string name="building_name">건물명</string>
    <string name="price">거래 가격</string>
    <string name="area">면적</string>
    <string name="type">종류</string>
    <string name="contract_year">계약연도</string>
    <string name="search_title">목적지 검색</string>
    <string name="recent_search">최근 검색어</string>
    <string name="delete_all">전체 삭제</string>
    <string name="permission_fine_location">위치 권한이 필요한 기능입니다.</string>
    <string name="btn_detail_house_info">매물 조회</string>
    <string name="sort_by_area">면적 순</string>
    <string name="sort_by_contract_year">계약연도 순</string>
    <string name="sort_by_type">거래종류 순</string>
    <string name="all_find_house_text">매물 조회</string>
    <string name="all_find_store_text">매장 검색</string>
    <string name="post_review_hint_contents">해당 지역의 좋은 점, 나쁜 점 등 \n집을 알아보는 모두에게 \n알려주고 싶은 정보와 이야기를 적어주세요.</string>
    <string name="post_review_hint_nickname">닉네임을 입력해주세요.</string>
    <string name="recent_charter_price">전세 %1$s</string>
    <string name="recent_monthly_price">월세 %1$s</string>
    <string name="empty_nickname">닉네임을 입력해주세요</string>
    <string name="empty_contents">내용을 입력해주세요</string>
    <string name="btn_more_text">더보기</string>
    <string name="btn_post_review">작성하기</string>
    <string name="detail_image_message">현재 이 건물을 %1$d명의 유저가 보고있습니다</string>
    <string name="detail_image_message_empty">해당 건물을 즐겨찾기에 추가해보세요</string>
    <string name="glide_street_img_url">https://maps.googleapis.com/maps/api/streetview?size=720x400&amp;location=%1$s&amp;key=%2$s</string>
    <string name="bookmark_empty">즐겨찾기가 비어있습니다.</string>
    <string name="recent_search_empty">최근 검색어가 없습니다.</string>
    <string name="review_empty">등록된 후기가 없습니다</string>
    <string name="search_hint">주소를 입력하세요.</string>

    <!-- user status 관련 resource-->
    <string name="info_success_search_place_text">%s가 %s개 검색되었습니다.</string>
    <string name="info_before_search_place_text">주변 상권을 검색하고 있습니다.</string>
    <string name="info_empty_search_house_text">건물의 거래내역이 존재하지 않습니다.</string>
    <string name="info_empty_search_place_text">주변의 상권이 존재하지 않습니다.</string>
    <string name="info_failure_search">네트워크나 서버의 상태가 불안정합니다.</string>
    <string name="info_empty_house_target">찾으시려는 매물을 지도에 표시해주세요.</string>
    <string name="all_text_empty">EMPTY</string>
    <string name="message_toast_back_btn">뒤로 가기를 한 번 더 누르시면 종료됩니다.</string>
    <string name="all_house_information_text">정보 보기</string>

</resources>
