<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="@dimen/ml_float_btn_width"
        android:layout_height="match_parent"
        android:id="@+id/ml_float_btn"
        android:paddingEnd="@dimen/ml_float_btn_padding_end"
        app:layout_constraintStart_toEndOf="@+id/guideline_filter_ml_width"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/guideline_filter_ml_height">
    <TextView
            style="@style/FilterTextView.OpenMode"
            android:text="@string/all_cafe"
            android:id="@+id/tv_filter_cafe"
            app:layout_constraintEnd_toStartOf="@+id/fab_filter_cafe"
            app:layout_constraintTop_toTopOf="@+id/fab_filter_cafe"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintBottom_toBottomOf="@+id/fab_filter_cafe"/>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
            style="@style/FloatingButton.Filter.OpenMode"
            android:id="@+id/fab_filter_cafe"
            android:src="@drawable/ic_map_cafe_white_24dp"
            app:fabSize="mini"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/fab_filter_food"/>
    <TextView
            style="@style/FilterTextView.OpenMode"
            android:text="@string/all_food"
            android:id="@+id/tv_filter_food"
            app:layout_constraintEnd_toStartOf="@+id/fab_filter_food"
            app:layout_constraintTop_toTopOf="@+id/fab_filter_food"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintBottom_toBottomOf="@+id/fab_filter_food"/>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
            style="@style/FloatingButton.Filter.OpenMode"
            android:id="@+id/fab_filter_food"
            android:src="@drawable/ic_map_food_white_24px"
            app:fabSize="mini"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/fab_filter_hospital"/>
    <TextView
            style="@style/FilterTextView.OpenMode"
            android:text="@string/all_hospital"
            android:id="@+id/tv_filter_hospital"
            app:layout_constraintEnd_toStartOf="@+id/fab_filter_hospital"
            app:layout_constraintTop_toTopOf="@+id/fab_filter_hospital"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintBottom_toBottomOf="@+id/fab_filter_hospital"/>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
            style="@style/FloatingButton.Filter.OpenMode"
            android:id="@+id/fab_filter_hospital"
            android:src="@drawable/ic_map_hospital_white_24dp"
            app:fabSize="mini"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/fab_filter_school"/>
    <TextView
            style="@style/FilterTextView.OpenMode"
            android:text="@string/all_school"
            android:id="@+id/tv_filter_school"
            app:layout_constraintEnd_toStartOf="@+id/fab_filter_school"
            app:layout_constraintTop_toTopOf="@+id/fab_filter_school"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintBottom_toBottomOf="@+id/fab_filter_school"/>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
            style="@style/FloatingButton.Filter.OpenMode"
            android:id="@+id/fab_filter_school"
            android:src="@drawable/ic_map_school_white_24dp"
            app:fabSize="mini"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/fab_filter_store"/>
    <TextView
            style="@style/FilterTextView.OpenMode"
            android:text="@string/all_store"
            android:id="@+id/tv_filter_store"
            app:layout_constraintEnd_toStartOf="@+id/fab_filter_store"
            app:layout_constraintTop_toTopOf="@+id/fab_filter_store"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintBottom_toBottomOf="@+id/fab_filter_store"/>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
            style="@style/FloatingButton.Filter.OpenMode"
            android:id="@+id/fab_filter_store"
            android:src="@drawable/ic_map_store_white_24dp"
            app:fabSize="mini"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/fab_filter_main"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
            style="@style/FloatingButton.Filter"
            app:fabSize="normal"
            app:borderWidth="0dp"
            android:id="@+id/fab_filter_main"
            android:src="@drawable/ic_search_white_24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="@dimen/fab_filter_main_margin_bottom"
            android:layout_marginEnd="@dimen/fab_filter_main_margin_end"/>
</androidx.constraintlayout.widget.ConstraintLayout>