<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable name="viewModel"
                  type="kr.co.connect.boostcamp.livewhere.ui.detail.DetailViewModel"/>
    </data>

    <androidx.cardview.widget.CardView
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            app:cardUseCompatPadding="true"
            app:cardElevation="@dimen/elevation_s">
        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:paddingTop="@dimen/space_small"
                android:paddingBottom="@dimen/space_small"
                android:paddingStart="@dimen/detail_contents_horizontal_padding"
                android:paddingEnd="@dimen/detail_contents_horizontal_padding">

            <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/detail_fragment_tv_trend_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/trend_price"
                    android:textColor="@color/black"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    style="@style/BasicTv.BodyL"
                    android:paddingStart="@dimen/space_small"
                    android:paddingEnd="@dimen/space_small"/>

            <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/detail_fragment_btn_trend_price_charter"
                    android:onClick="@{viewModel.onClickedAvgPriceType}"
                    setButtonColor="@{viewModel.avgPriceType}"
                    android:background="@drawable/background_detail_trend_price_button_active"
                    android:elevation="2dp"
                    android:translationZ="2dp"
                    android:stateListAnimator="@null"
                    style="@style/TrendPriceButton"
                    android:text="@string/charter"
                    android:layout_marginEnd="@dimen/space_x_small"
                    app:layout_constraintEnd_toStartOf="@id/detail_fragment_btn_trend_price_monthly"
                    app:layout_constraintTop_toTopOf="parent"/>

            <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/detail_fragment_btn_trend_price_monthly"
                    android:background="@drawable/background_detail_trend_price_button_inactive"
                    android:onClick="@{viewModel.onClickedAvgPriceType}"
                    setButtonColor="@{viewModel.avgPriceType}"
                    android:textColor="@color/colorPrimary"
                    android:elevation="2dp"
                    android:translationZ="2dp"
                    style="@style/TrendPriceButton"
                    android:stateListAnimator="@null"
                    android:text="@string/monthly_rent"
                    app:layout_constraintEnd_toEndOf="@id/detail_fragment_chart"
                    app:layout_constraintTop_toTopOf="parent"/>

            <com.github.mikephil.charting.charts.BarChart
                    android:id="@+id/detail_fragment_chart"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/detail_bar_chart_height"
                    app:layout_constraintTop_toBottomOf="@id/detail_fragment_btn_trend_price_charter"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginStart="@dimen/detail_rv_horizontal_margin"
                    android:layout_marginEnd="@dimen/detail_rv_horizontal_margin"
                    app:setBarChart="@{viewModel.getAvgPriceList()}">

            </com.github.mikephil.charting.charts.BarChart>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</layout>